# NeuronOS

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_automations_action_type_fk.py  0003_document_chunks_embedding_nullable.py  0004_documents_content_hash.py  0005_chat_conversations.py
backend/app/: main.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  ai_action.py  automation.py  base.py  chat.py  customer.py  document.py  integration.py  meeting.py  organization.py  project.py  score_history.py  types.py  user.py
backend/app/repositories/: ai_action_repository.py  automation_repository.py  chat_repository.py  customer_repository.py  document_repository.py  organization_repository.py  user_repository.py
backend/app/schemas/: ai_action.py  auth.py  automation.py  chat.py  customer.py  document.py  onboarding.py  reports.py  settings.py
backend/app/services/: ai_action_service.py  auth_service.py  automation_service.py  chat_service.py  customer_service.py  decision_engine.py  document_service.py  embedding_service.py  linked_entity_service.py  onboarding_service.py  reports_service.py  settings_service.py  storage.py  summarization_service.py  text_extraction.py
backend/tests/: conftest.py  test_ai_actions.py  test_auth.py  test_automations.py  test_chat.py  test_customers.py  test_decision_engine.py  test_documents.py  test_onboarding.py  test_organization.py  test_reports.py  test_settings.py
(+70 files in other folders)
